@@ -10,6 +10,8 @@ Change history
   
 - Having an approval link in the tabs confused the users, so I removed it.
 
+- Added a "Disapprove & Delete" button at the request from users.
+
 
 1.0b1 (2012-05-31)
 ------------------
